--- a/main.html
+++ b/main.html
@@ -53,3 +53,32 @@ Minneapolis, MN 55419 |
                 <h4>I have worked in a one to one laptop program for ten years which has included developing online learning activities, informal and formal assessments, and have utilized several learning management systems.</h4>
 </body>
 </html>
+h1 {
+	text-align: center;
+}
+
+h5 {
+	text-align: center;
+}
+h1 {
+	color: rgb(8, 88, 46)
+	;
+}
+body {
+	background-image:url("http://i.stack.imgur.com/jGlzr.png");
+	font-family: 'Lato', Georgia, sans-serif;
+}
+h3 {
+	color: rgb(8, 88, 46);
+}
+
+li {
+	font: 17px times;
+}
+
+h3 {
+	border: 3px solid #000;
+	margin: 15px;
+	padding: 10px;
+}
+
